Security reminder: MediaWiki does not require PHP's register_globals. If you
have it on, turn it '''off''' if you can.

== MediaWiki 1.23 ==

THIS IS NOT A RELEASE YET

MediaWiki 1.23 is an alpha-quality branch and is not recommended for use in
production.

=== Configuration changes in 1.23 ===
* $wgDebugLogGroups values may be set to an associative array with a
  'destination' key specifying the log destination. The array may also contain
  a 'sample' key with a positive integer value N indicating that the log group
  should be sampled by dispatching one in every N messages on average. The
  sampling is random.
* In addition to the current exception log format, MediaWiki now serializes
  exception metadata to JSON and logs it to the 'exception-json' log group.
  This makes MediaWiki easier to integrate with log aggregation and analysis
  tools.
* $wgSquidServersNoPurge now supports the use of Classless Inter-Domain
  Routing (CIDR) notation to specify contiguous blocks of IPv4 and/or IPv6
  addresses that should be trusted to provide X-Forwarded-For headers.
* Preferences 'watchcreations', 'watchdefault', 'enotifwatchlistpages' ("Add
  pages I create and files I upload to my watchlist", "Add pages and files I
  edit to my watchlist", "Email me when a page or file on my watchlist is
  changed") are now enabled by default. In addition new user accounts' personal
  and talk pages are now watched by them by default.
* $wgLBFactoryConf: Class names have had underscores removed. The configuration
  should be updated if LBFactory_Simple or LBFactory_Multi is configured.
* $wgPasswordSenderName has been removed and is no longer functional. To set a
  custom mailer name, the system message 'emailsender' should be modified
  (default: "{{SITENAME}}").
* $wgDBAhandler was removed as the only class using it was also removed
* The 'max threads' setting was removed from $wgDBservers.
* Support for AdminSettings.php has been completely removed. All configuration